--- a/graveyard/graveyard.html
+++ b/graveyard/graveyard.html
@@ -11,7 +11,9 @@
         <!-- Header -->
         <header class="header">
             <div class="header-content">
-                <div class="logo">🪦</div>
+                <div class="logo">
+                    <img src="../assets/branding/logo.png" alt="TABSTONE" class="logo-img">
+                </div>
                 <div class="header-text">
                     <h1 class="title">tabstone</h1>
                 </div>
