barren graveyard UI update

--- a/graveyard/graveyard.html
+++ b/graveyard/graveyard.html
@@ -36,11 +36,11 @@
 
             <!-- Empty State -->
             <div id="emptyContainer" class="empty-container hidden">
-                <div class="empty-icon">🪦</div>
+                <div class="empty-icon">👀</div>
                 <h2 class="empty-title">No Buried Tabs</h2>
                 <p class="empty-text">Your graveyard is barren. Bury some tabs to see them here.</p>
                 <button id="buryTabsBtn" class="btn btn-primary">
-                    🪦 Bury Some Tabs
+                    Bury Some Tabs
                 </button>
             </div>
 
